--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     "require-dev": {
         "symfony/framework-bundle": "~4.0",
         "symfony/phpunit-bridge": "~4.0",
-        "phpunit/phpunit": "^5.4.4"
+        "phpunit/phpunit": "^5.4.4",
+        "doctrine/annotations": "^1.6",
+        "mockery/mockery": "^1.1"
     },
     "scripts": {
         "auto-scripts": {
