--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         "symfony/framework-bundle": "~4.0",
         "symfony/phpunit-bridge": "~4.0",
         "phpunit/phpunit": "^5.4.4",
-        "doctrine/annotations": "^1.6",
-        "mockery/mockery": "^1.1"
+        "doctrine/annotations": "^1.6"
     },
     "scripts": {
         "auto-scripts": {
