--- a/Tests/Funtional/config/config.yaml
+++ b/Tests/Funtional/config/config.yaml
@@ -10,7 +10,22 @@ rs_di_extra:
     locations:
         bundles:
             -         BarBundle
-    doctrine_integration: true
 
+doctrine:
+    dbal:
+        # configure these for your database server
+        driver: pdo_sqlite
+        path: 'sqlite:///%kernel.cache_dir%/var/app.db'
+        charset: UTF8
+
+    orm:
+        auto_generate_proxy_classes: '%kernel.debug%'
+        naming_strategy: doctrine.orm.naming_strategy.underscore
+        auto_mapping: true
+        mappings:
+            BarBundle:
+                is_bundle: true
+                type: annotation
 parameters:
     foo:              bar
+
