--- a/Tests/Funtional/config/config.yaml
+++ b/Tests/Funtional/config/config.yaml
@@ -4,7 +4,7 @@ framework:
     session:
         storage_id:  session.storage.mock_file
     router:
-        resource:    "%kernel.root_dir%/config/routing.yml"
+        resource:    "%kernel.root_dir%/config/routing.yaml"
 
 rs_di_extra:
     locations:
@@ -26,6 +26,20 @@ doctrine:
             BarBundle:
                 is_bundle: true
                 type: annotation
+
+sensio_framework_extra:
+    request: { converters: false }
+
 parameters:
     foo:              bar
+    kernel.debug:    true
+
+services:
+    # default configuration for services in *this* file
+    _defaults:
+        autowire: true      # Automatically injects dependencies in your services.
+        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        public: false       # Allows optimizing the container by removing unused services; this also means
+                            # fetching services directly from the container via $container->get() won't work.
+                            # The best practice is to be explicit about your dependencies anyway.
 
