--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
     },
     "require": {
         "php": "^7.1.3",
-        "symfony/yaml": "~4.0",
         "symfony/finder": "~4.0",
         "symfony/filesystem": "~4.0",
         "symfony/dependency-injection": "~4.0",
@@ -26,7 +25,12 @@
         "phpunit/phpunit": "^5.4.4",
         "doctrine/annotations": "^1.6",
         "doctrine/orm": "^2.6",
-        "doctrine/doctrine-bundle": "^1.9"
+        "doctrine/doctrine-bundle": "^1.9",
+        "symfony/browser-kit": "^4.1",
+        "symfony/dom-crawler": "^4.1",
+        "sensio/framework-extra-bundle": "^5.2",
+        "symfony/expression-language": "^4.1",
+        "symfony/yaml": "^4.1"
     },
     "scripts": {
         "auto-scripts": {
