--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,13 @@
         "doctrine/annotations": "^1.6",
         "doctrine/orm": "^2.6",
         "doctrine/doctrine-bundle": "^1.9",
-        "symfony/browser-kit": "^4.1",
-        "symfony/dom-crawler": "^4.1",
+        "symfony/browser-kit": "~4.0",
+        "symfony/dom-crawler": "~4.0",
         "sensio/framework-extra-bundle": "^5.2",
-        "symfony/expression-language": "^4.1",
-        "symfony/yaml": "^4.1"
+        "symfony/expression-language": "~4.0",
+        "symfony/yaml": "~4.0",
+        "symfony/form": "~4.0",
+        "symfony/validator": "~4.0"
     },
     "scripts": {
         "auto-scripts": {
