--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
         "symfony/finder": "~4.0",
         "symfony/filesystem": "~4.0",
         "symfony/dependency-injection": "~4.0",
-        "symfony/config": "~4.0"
+        "symfony/config": "~4.0",
+        "doctrine/annotations": "^1.6"
     },
     "require-dev": {
         "symfony/framework-bundle": "~4.0",
         "symfony/phpunit-bridge": "~4.0",
         "phpunit/phpunit": "^5.4.4",
-        "doctrine/annotations": "^1.6",
         "doctrine/orm": "^2.6",
         "doctrine/doctrine-bundle": "^1.9",
         "symfony/browser-kit": "~4.0",
