--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "symfony/framework-bundle": "~4.0",
         "symfony/phpunit-bridge": "~4.0",
         "phpunit/phpunit": "^5.4.4",
-        "doctrine/orm": "^2.6",
+        "doctrine/orm": "2.6.*",
         "doctrine/doctrine-bundle": "^1.9",
         "symfony/browser-kit": "~4.0",
         "symfony/dom-crawler": "~4.0",
