--- a/composer.json
+++ b/composer.json
@@ -13,25 +13,26 @@
         "psr-4": { "RS\\DiExtraBundle\\": "" }
     },
     "require": {
-        "php": "^7.1.3",
-        "symfony/finder": "~4.0",
-        "symfony/filesystem": "~4.0",
-        "symfony/dependency-injection": "~4.0",
-        "symfony/config": "~4.0",
+        "php": ">=7.2.5",
+        "symfony/finder": "~5.0",
+        "symfony/filesystem": "~5.0",
+        "symfony/dependency-injection": "~5.0",
+        "symfony/config": "~5.0",
         "doctrine/annotations": "^1.6"
     },
     "require-dev": {
-        "symfony/framework-bundle": "~4.0",
-        "symfony/phpunit-bridge": "~4.0",
-        "phpunit/phpunit": "^5.4.4",
-        "doctrine/orm": "2.6.*",
-        "doctrine/doctrine-bundle": "^1.9",
-        "symfony/browser-kit": "~4.0",
-        "symfony/dom-crawler": "~4.0",
-        "symfony/expression-language": "~4.0",
-        "symfony/yaml": "~4.0",
-        "symfony/form": "~4.0",
-        "symfony/validator": "~4.0"
+        "symfony/framework-bundle": "~5.0",
+        "symfony/phpunit-bridge": "~5.0",
+        "phpunit/phpunit": "^6.0",
+        "doctrine/orm": "^2.6",
+        "doctrine/doctrine-bundle": "^2.0",
+        "symfony/browser-kit": "~5.0",
+        "symfony/dom-crawler": "~5.0",
+        "symfony/expression-language": "~5.0",
+        "symfony/yaml": "~5.0",
+        "symfony/form": "~5.0",
+        "symfony/validator": "~5.0",
+        "symfony/event-dispatcher": "^5.3"
     },
     "scripts": {
         "auto-scripts": {
