add doctrine/annotations=^2.0 support

--- a/Tests/Functional/config/config.yaml
+++ b/Tests/Functional/config/config.yaml
@@ -18,7 +18,7 @@ doctrine:
     dbal:
         # configure these for your database server
         driver: pdo_sqlite
-        path: 'sqlite:///%kernel.cache_dir%/var/app.db'
+        path: 'sqlite::memory:'
         charset: UTF8
 
     orm:
