--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,11 @@
         "symfony/filesystem": "~5.0",
         "symfony/dependency-injection": "~5.0",
         "symfony/config": "~5.0",
-        "doctrine/annotations": "^1.6"
+        "doctrine/annotations": "^2.0"
     },
     "require-dev": {
         "symfony/framework-bundle": "~5.0",
-        "symfony/phpunit-bridge": "~5.0",
-        "phpunit/phpunit": "^6.0",
+        "symfony/phpunit-bridge": "5.4.*",
         "doctrine/orm": "^2.6",
         "doctrine/doctrine-bundle": "^2.0",
         "symfony/browser-kit": "~5.0",
@@ -32,7 +31,8 @@
         "symfony/yaml": "~5.0",
         "symfony/form": "~5.0",
         "symfony/validator": "~5.0",
-        "symfony/event-dispatcher": "^5.3"
+        "symfony/event-dispatcher": "^5.3",
+        "phpunit/phpunit": "^9.6"
     },
     "scripts": {
         "auto-scripts": {
