--- a/composer.json
+++ b/composer.json
@@ -13,25 +13,25 @@
         "psr-4": { "RS\\DiExtraBundle\\": "" }
     },
     "require": {
-        "php": ">=7.2.5",
-        "symfony/finder": "~5.0",
-        "symfony/filesystem": "~5.0",
-        "symfony/dependency-injection": "~5.0",
-        "symfony/config": "~5.0",
+        "php": ">=8.1.0",
+        "symfony/finder": "~6.4",
+        "symfony/filesystem": "~6.4",
+        "symfony/dependency-injection": "~6.4",
+        "symfony/config": "~6.4",
         "doctrine/annotations": "^2.0"
     },
     "require-dev": {
-        "symfony/framework-bundle": "~5.0",
-        "symfony/phpunit-bridge": "5.4.*",
+        "symfony/framework-bundle": "~6.4",
+        "symfony/phpunit-bridge": "~6.4",
         "doctrine/orm": "^2.6",
         "doctrine/doctrine-bundle": "^2.0",
-        "symfony/browser-kit": "~5.0",
-        "symfony/dom-crawler": "~5.0",
-        "symfony/expression-language": "~5.0",
-        "symfony/yaml": "~5.0",
-        "symfony/form": "~5.0",
-        "symfony/validator": "~5.0",
-        "symfony/event-dispatcher": "^5.3",
+        "symfony/browser-kit": "~6.4",
+        "symfony/dom-crawler": "~6.4",
+        "symfony/expression-language": "~6.4",
+        "symfony/yaml": "~6.4",
+        "symfony/form": "~6.4",
+        "symfony/validator": "~6.4",
+        "symfony/event-dispatcher": "~6.4",
         "phpunit/phpunit": "^9.6"
     },
     "scripts": {
